// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/kanban/kanbanCard return kanbanCard and click on delete menu  1`] = `
<div
  aria-hidden="true"
>
  <span
    class="variable variable"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-uufjfw-MuiTypography-root-MuiLink-root"
      draggable="false"
      href="/test-space/86382f29-b73b-42c2-b3bd-b69d2143e7f3"
    >
      <div
        class="KanbanCard MuiBox-root css-1oaiypi"
        data-test="kanban-card-86382f29-b73b-42c2-b3bd-b69d2143e7f3"
        draggable="true"
        style="opacity: 1;"
      >
        <div
          data-testid="page-actions-context-menu"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall icons css-1t9kyav-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeSmall css-fq32bd-MuiSvgIcon-root"
              data-testid="MoreHorizIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </button>
        </div>
        <div
          class="octo-icontitle"
        >
          <div>
            <div
              class="css-jm1ma0"
            >
              <img
                src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f4da.svg"
              />
            </div>
          </div>
          <div
            class="octo-titletext"
          >
            Page 86382f29-b73b-42c2-b3bd-b69d2143e7f3
          </div>
        </div>
        <div
          class="MuiStack-root css-1qh2y1i-MuiStack-root"
        />
      </div>
    </a>
  </span>
</div>
`;

exports[`src/components/kanban/kanbanCard should match snapshot 1`] = `
<div>
  <span
    class="variable variable"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-uufjfw-MuiTypography-root-MuiLink-root"
      draggable="false"
      href="/test-space/86382f29-b73b-42c2-b3bd-b69d2143e7f3"
    >
      <div
        class="KanbanCard MuiBox-root css-1oaiypi"
        data-test="kanban-card-86382f29-b73b-42c2-b3bd-b69d2143e7f3"
        draggable="true"
        style="opacity: 1;"
      >
        <div
          data-testid="page-actions-context-menu"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall icons css-1t9kyav-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorSecondary MuiSvgIcon-fontSizeSmall css-fq32bd-MuiSvgIcon-root"
              data-testid="MoreHorizIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
          </button>
        </div>
        <div
          class="octo-icontitle"
        >
          <div>
            <div
              class="css-jm1ma0"
            >
              <img
                src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f4da.svg"
              />
            </div>
          </div>
          <div
            class="octo-titletext"
          >
            Page 86382f29-b73b-42c2-b3bd-b69d2143e7f3
          </div>
        </div>
        <div
          class="MuiStack-root css-1qh2y1i-MuiStack-root"
        />
      </div>
    </a>
  </span>
</div>
`;

exports[`src/components/kanban/kanbanCard should match snapshot with readonly 1`] = `
<div>
  <span
    class="variable variable"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-uufjfw-MuiTypography-root-MuiLink-root"
      draggable="false"
      href="/test-space/86382f29-b73b-42c2-b3bd-b69d2143e7f3"
    >
      <div
        class="KanbanCard MuiBox-root css-1oaiypi"
        data-test="kanban-card-86382f29-b73b-42c2-b3bd-b69d2143e7f3"
        draggable="false"
        style="opacity: 1;"
      >
        <div
          class="octo-icontitle"
        >
          <div>
            <div
              class="css-jm1ma0"
            >
              <img
                src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f4da.svg"
              />
            </div>
          </div>
          <div
            class="octo-titletext"
          >
            Page 86382f29-b73b-42c2-b3bd-b69d2143e7f3
          </div>
        </div>
        <div
          class="MuiStack-root css-1qh2y1i-MuiStack-root"
        />
      </div>
    </a>
  </span>
</div>
`;
